unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/fields/erpws__ApexJobClassName__c.field-meta.xml
<CustomField>
    <fullName>erpws__ApexJobClassName__c</fullName>
    <label>Apex Job Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>