unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/fields/erpws__BatchControlRecordID__c.field-meta.xml
<CustomField>
    <fullName>erpws__BatchControlRecordID__c</fullName>
    <label>Batch Control Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>