unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/fields/erpws__FromProgressBar__c.field-meta.xml
<CustomField>
    <fullName>erpws__FromProgressBar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Progress Bar</label>
    <type>Checkbox</type>
</CustomField>