unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/fields/erpws__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>erpws__ProcessName__c</fullName>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>