unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/fields/erpws__ProgressInformation__c.field-meta.xml
<CustomField>
    <fullName>erpws__ProgressInformation__c</fullName>
    <label>Progress Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>