unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/fields/erpws__StatusDetail__c.field-meta.xml
<CustomField>
    <fullName>erpws__StatusDetail__c</fullName>
    <label>Status Detail</label>
    <type>TextArea</type>
</CustomField>