unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/fields/erpws__SuccessfulRecordID__c.field-meta.xml
<CustomField>
    <fullName>erpws__SuccessfulRecordID__c</fullName>
    <label>Successful Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>