unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/fields/erpws__UseDefaultConstructor__c.field-meta.xml
<CustomField>
    <fullName>erpws__UseDefaultConstructor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Constructor</label>
    <type>Checkbox</type>
</CustomField>