unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/listViews/erpws__All.listView-meta.xml
<ListView>
    <fullName>erpws__All</fullName>
    <columns>NAME</columns>
    <columns>erpws__Status__c</columns>
    <columns>erpws__ApexJobClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>