unpackaged/main/default/objects/erpws__fflib_BatchProcess__c/listViews/erpws__All1.listView-meta.xml
<ListView>
    <fullName>erpws__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>